# ReinforceClaw

./: .gitignore  LICENSE  README.md  pyproject.toml
nudge/: cli.py  db.py  feedback.py  models.py  scheduler.py  trainer.py
nudge/hooks/: _common.py  claude_code.py  codex.py  discord_cog.py  imessage.py  matrix.py  openclaw.py  signal.py  slack.py  telegram.py  whatsapp.py
openclaw-plugin/: openclaw.plugin.json  package.json
openclaw-plugin/src/: index.ts
reinforceclaw/: backend_cuda.py  backend_mlx.py  cli.py  db.py  feedback.py  models.py  presets.py  profile.py  scheduler.py  trainer.py
reinforceclaw/hooks/: _common.py  claude_code.py  codex.py  openclaw.py
reinforceclaw/openclaw_plugin/: openclaw.plugin.json  package.json
reinforceclaw/openclaw_plugin/src/: index.ts
tests/: test_collect.py  test_control_plane.py  test_db.py  test_ema_vs_grpo.py  test_lora.py  test_smoke.py  test_train_minimal.py  test_training.py
