[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforceclaw"
version = "0.1.0"
description = "Personal RL feedback system — rate AI responses, train local LoRA adapters"
requires-python = ">=3.10"
dependencies = [
    "safetensors>=0.4",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.30.0",
    "mlx-lm>=0.30.0",
]
cuda = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.11",
    "huggingface-hub>=0.23",
]
integrations = [
    "discord.py>=2.4",
    "slack-bolt>=1.20",
    "botbuilder-core>=4.17",
    "botbuilder-schema>=4.17",
    "python-telegram-bot>=21.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
reinforceclaw = [
    "openclaw_plugin/openclaw.plugin.json",
    "openclaw_plugin/package.json",
    "openclaw_plugin/src/index.ts",
]

[tool.setuptools.packages.find]
include = ["reinforceclaw*"]

[project.scripts]
reinforceclaw = "reinforceclaw.cli:main"
